fix(landing): remove z-index from intro text

--- a/frontend/src/styles/_landing.scss
+++ b/frontend/src/styles/_landing.scss
@@ -149,7 +149,6 @@ $cell-weekdays-width: 33px;
     font-size: 3rem;
     width: auto;
     max-width: 700px;
-    z-index: 4;
     margin-block: auto;
     margin-inline: 20px;
     padding: 30px 30px;
